screen-result and screen-holder overflow problem fixed.

--- a/css/styles.css
+++ b/css/styles.css
@@ -182,22 +182,26 @@ body {
 
 .screen-holder {
     text-align: right;
-    height: 10.44%;
+    height: 35px;
     color: var(--dark-hover-color);
     font-size: 14px;
     font-weight: 400;
     padding: 0 12px;
-    ;
-    text-overflow: ellipsis;
-    width: 100%;
+    overflow-x: auto;
+    overflow-y: hidden !important;
+    white-space: nowrap;
 }
 
 .screen-result {
+    width: 100%;
     text-align: right;
     color: #000;
     font-size: 44px;
     font-weight: 500;
-    padding: 5px 12px
+    padding: 5px 12px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .memory-btn-row {
@@ -530,8 +534,7 @@ body {
 }
 
 .history-item {
-    width: 100%;
-    /* height: 64px; */
+    max-width: 100%;
     margin-bottom: 24px
 }
 
@@ -654,6 +657,10 @@ body {
 
     .history-icon-wrapper {
         display: none
+    }
+
+    .left {
+        width: calc(100% - 325px)
     }
 
     /* #keypad {
